# tpr

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  tpr.sublime-project
.github/workflows/: cmake.yml  cmakedp.yml  format-check.yml
src/: CMakeLists.txt  cr.cpp  cr.hpp  lib.cpp  lib.hpp  main.cpp  main.cu  main.hpp  numerical_stability.cpp  numerical_stability.hpp  pcr.cpp  pcr.hpp  pm.cpp  pm.cu  pm.cuh  pm.hpp  ptpr.cpp  ptpr.cu  ptpr.cuh  ptpr.hpp  reference_cusparse.cu  reference_cusparse.cuh  reference_lapack.cpp  reference_lapack.hpp  system.cpp  system.hpp  system.hpp.in  tpr.cpp  tpr.cu  tpr.cuh  tpr.hpp  tpr_perf.cpp  tpr_perf.hpp
src/inputs/: eq1.txt  eq10.txt  eq11.txt  eq12.txt  eq13.txt  eq14.txt  eq15.txt  eq16.txt  eq17.txt  eq18.txt  eq19.txt  eq2.txt  eq20.txt  eq3.txt  eq4.txt  eq5.txt  eq6.txt  eq7.txt  eq8.txt  eq9.txt  gen_matrix.m  m13.txt  xt.txt
test/: CMakeLists.txt  ans1024.txt  cuexamples.cpp  examples.cpp  random_input.cpp
